added configuration jboss

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 services:
-  dockerTomcat:
-    image: tomcat
-    volumes:
-      - ./target:/usr/local/tomcat/webapps
-    ports:
-      - 8090:8080
+  wildfly:
+      image: quay.io/wildfly/wildfly
+      ports:
+        - "90:8080"
+      volumes:
+        - "./target:/opt/jboss/wildfly/standalone/deployments/"
   dockerDatabase:
     image: postgres
     environment:
